Apenas incluí : .comtainer no css

--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ header a{
     font-weight: 300;
 
 }
+
+.container{
+    height: 100vh; /*100 pequenas partes de altura da tela inteira vem de veel heigth*/
+    width: 100vw; /*100 pequenas partes de largura da tela inteira de largura  vem de veel width*/
+    margin-top: -100px;/*-50px*/
+}
