--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border;
+    box-sizing: border-box;
     text-decoration: none;
     font-family: "Poppins", sans-serif; /*Aplicado para toda a minha aplicação*/
 }
@@ -34,4 +34,78 @@ header a{
     height: 100vh; /*100 pequenas partes de altura da tela inteira vem de veel heigth*/
     width: 100vw; /*100 pequenas partes de largura da tela inteira de largura  vem de veel width*/
     margin-top: -100px;/*-50px*/
+    overflow: hidden;
 }
+
+.container .list .list-item{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    
+}
+
+.container .list .list-item img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    filter: brightness(50%);
+}
+
+.container .list .list-item .content{
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    padding-right: 30%;
+    width: 80%;
+    color:#eee;
+    box-shadow: 0 5px 10px #0004;
+}
+
+.container .list .list-item .title{
+    font-size: 5em;
+    font-weight: 700;
+    line-height: 1.3em;
+}
+
+.container .list .list-item .description{
+    font-size: 1.2em;/*1.5em*/
+
+}
+
+.container .list .list-item .buttons{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    margin-top: 20px;
+    gap: 5px;
+}
+
+.container .list .list-item .buttons button{
+    border: none;
+    background-color: #eee;
+    letter-spacing: 5px;
+    font-weight: 500;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+.container .list .list-item .buttons button:hover{
+    background-color: transparent;
+    border: 1px solid #eee;
+    color: #eee;
+    transition: 0.7s;
+}
+
+.container .list .list-item .buttons button:nth-child(2){
+    background-color: transparent;
+    border: 1px solid #eee;
+    color: #eee;
+
+
+}
+
+.container .list .list-item .buttons button:nth-child(2):hover{
+    background-color: #eee;
+    color:#000;
+    
+}
+
